# VGB-DM

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
experiments/scripts/: evaluate.sh  pendulum.sh  reactdiff.sh  rlc.sh  run_lorenz.sh  run_pendulum.sh
experiments/scripts/configs/: default.yaml  joblib-options.yaml  run_conf.yaml  shared_options.yaml  submitit-slurm-options.yaml
src/data/: dataset_utils.py  utils.py
src/data/tensor_dataset/: dataset_factory.py  lorenz_dataset.py  pendulum_dataset.py  reactdiff_dataset.py  rlc_dataset.py
src/evaluate/: evaluate.py  naive_baseline_ref.py  utils.py
src/grey_box_clim/: climode_train_hourly.py  climode_train_monthly.py  data.py  evaluation_hourly.py  evaluation_monthly.py  fm_phys_func.py  gb_dm_train_hourly.py  gb_dm_train_monthly.py  hourly_eval.ipynb  model_function.py  model_utils.py  monthly_eval.ipynb  utils.py
src/interpolants/: interpolants_fabric.py  lagrange_interpolant.py
src/io/: utils.py
src/metrics/: __init__.py  loss.py  metrics.py
src/models/encoders/: __init__.py  base_encoder.py  encoder_factory.py  lorentz_encoder.py  reactdiff_enc.py
src/models/node/: gb_reactdiff_node.py  grey_box_node.py
src/models/vf_models/: gb_reactdiff.py  grey_box_fm.py  vf_factory.py
src/nn/: mlp.py  unet.py
src/runner/: run_hydra.py  run_task.py
src/sampler/: distributions.py
src/simulators/lorenz_attractor/: lorenz_model.py
src/simulators/pendulum/: __init__.py  options.py  (+1 more)
src/train/: train_node_physvae.py  train_vi_grey_box_fm.py
src/utils/: hash.py  torch_utils.py
(+21 files in other folders)
